valid_tests/type_checking/test2.go
// Test 2: Function return type checking
func getInt() int {
    return 42
}

func getFloat() float64 {
    return 3.14
}

func main() {
    x := getInt()
    y := getFloat()
}
