invalid_tests/keywords/test2.go
// Test 2: Using type as variable name
func main() {
    int := 10
}
